# craft

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  optimizers.md  problem_formulation.md
notebooks/: 1.0-Supply_Generator.ipynb  1.0-supply_generator.ipynb  2.0-Capacity_Allocation.ipynb  3.0-Fair-Oriented_Timetabling.ipynb  3.0-Fairness_Timetabling.ipynb  4.0-GSA_Timetabling.ipynb  5.0-Mealpy_Timetabling.ipynb
scripts/: run_fairness.py  run_gsa.py  run_mealpy.py  run_supply_generator.py
src/craft/: __init__.py  common.py  entities.py  fairness.py  plotter.py  revenue.py  runner.py  scheduling.py  utils.py
src/craft/gsa/: __init__.py  algorithm.py  elements.py  entities.py  fields.py
src/craft/mealpy/: __init__.py  entities.py  revenue.py  scheduling.py  timetabling.py  utils.py
tests/: conftest.py  test_common.py  test_e2e.py  test_fairness.py  test_gsa.py  test_revenue.py  test_runner.py  test_runner_integration.py  test_scheduling.py  test_utils.py
