[project]
name = "craft"
version = "0.1.0"
description = ""
authors = [
    {name = "DavidMunozValero",email = "david.munoz6@alu.uclm.es"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "craft", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
