[project]
name = "craft"
version = "0.1.0"
description = "CRAFT — Capacity & Revenue-Aware Fair Timetabling via metaheuristics (GSA & mealpy) on top of the robin railway simulator."
authors = [
    {name = "DavidMunozValero", email = "david.munoz6@alu.uclm.es"}
]
readme = "README.md"
dynamic = ["dependencies", "requires-python"]

[tool.poetry]
packages = [{include = "craft", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
# Railway simulator: editable install from a sibling checkout of robin (GitHub master).
robin = {path = "../robin", develop = true}
mealpy = ">=3.0.2,<4.0.0"
numpy = ">=2.2.4,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
scipy = ">=1.11,<2.0"
matplotlib = ">=3.10,<4.0"
seaborn = ">=0.13.2,<0.14"
geopy = ">=2.4,<3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
pytest-cov = ">=5.0,<6.0"
ruff = ">=0.6,<1.0"
mypy = ">=1.10,<2.0"
jupyter = ">=1.0,<2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["craft"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mealpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "robin.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "geopy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "seaborn.*"
ignore_missing_imports = true
